Fixed header on mobile

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -11,11 +11,11 @@ h1 {
   color: #666;
 }
 h1 svg {
-  margin-right: 20px;
+  margin: 0 20px 0 0;
   color: hotpink;
 }
 h1 svg.atom {
-  margin-left: 20px;
+  margin: 0 0 0 20px;
   color: #61dbfb;
 }
 
@@ -167,6 +167,10 @@ button .svg-inline--fa,
   z-index: 1;
   border: 1px solid #000;
   box-shadow: inset 0 0 6px 2px rgba(0,0,0,.5);
+}
+
+.finish h1 {
+  font-size: 1.6em;
 }
 
 .finish .content:before {
